changed the look and feel of login

--- a/login.html
+++ b/login.html
@@ -21,9 +21,9 @@
                                     <fieldset>
                                       <form action="home.html" method="">
                                         <label id="idinput" for="username"><label>
-                                        <input type="text" class="username" placeholder="Username"><br><br><br><br>
+                                        <input type="text" class="username" placeholder=" Username"><br><br>
                                         <label for="password" id="passwd"><label>
-                                        <input type="password" class="password" placeholder="password"><br><br>
+                                        <input type="password" class="password" placeholder=" password"><br><br>
                                         <input type="submit" id="button" value="Login">
                                         <a class="forget" href="index.html">forgot password?</a>
                                       </form>
