changed the look of signup page

--- a/signup.html
+++ b/signup.html
@@ -12,13 +12,12 @@
 
     <link rel="stylesheet" type="text/css" href="signup.css">
   </head>
-  <body background="73064()">
-    <fieldset>
-      <div id="registrationHeader">
-        <h1>Fill it!</h1>
-      </div>
-    <form action="" method="">
-      <br><br><br><br><br>
+  <body bgcolor="black">
+
+    <div id="registrationHeader">
+        <h1 id="signUpHeader">GET IN TOUCH</h1>
+   <fieldset>
+     <form action="" method="POST">
       <input type="text" id="firstName" placeholder="First name">
       <input type="text" id="secondName" placeholder="Second name"><br><br>
       <input type="text" id="eMail" placeholder="Email address"><br><br>
@@ -32,5 +31,7 @@
       <input type="reset" name="reset" value="reset">
       <center>
     </form>
+  </fieldset>
+    </div>
   </body>
 </html>
