--- a/signup.html
+++ b/signup.html
@@ -17,17 +17,14 @@
     <div id="registrationHeader">
         <h1 id="signUpHeader">GET IN TOUCH</h1>
    <fieldset>
-     <form action="signup.php" method="GET">
+     <form action="signup.php" method="POST">
       <input type="text" id="firstName" name="firstName" placeholder="First name">
       <input type="text" id="secondName" name="secondName" placeholder="Second name"><br><br>
       <input type="text" id="eMail" name="eMail" placeholder="Email address"><br><br>
       <input type="number" id="MoNumber" name="MoNumber" placeholder="+91 9898989889"><br><br>
       <input type="date" id="dob" name="dob" >
-      <label id="genderLabel" for="gender">Male<label>
-      <input type="radio" id="gender" name="gender">
-      <label id="genderLabel" for="gender">Female<label>
-      <input type="radio" id="gender">
-      <input type="submit" name="submit" value="submit">
+    
+      <input type="submit" name="b" value="submit">
       <input type="reset" name="reset" value="reset">
       </form>
       <center>
