--- a/signup.html
+++ b/signup.html
@@ -17,17 +17,16 @@
     <div id="registrationHeader">
         <h1 id="signUpHeader">GET IN TOUCH</h1>
    <fieldset>
-     <form action="" method="POST">
+     <form action="val.php" method="POST">
       <input type="text" id="firstName" placeholder="First name">
       <input type="text" id="secondName" placeholder="Second name"><br><br>
       <input type="text" id="eMail" placeholder="Email address"><br><br>
       <input type="number" id="MoNumber" placeholder="+91 9898989889"><br><br>
-      <textarea rows="4" cols="50" placeholder="address"></textarea><br><br>
       <label id="genderLabel" for="gender">Male<label>
       <input type="radio" id="gender">
       <label id="genderLabel" for="gender">Female<label>
       <input type="radio" id="gender">
-      <input type="submit" name="" value="">
+      <input type="submit" name="submit" value="submit">
       <input type="reset" name="reset" value="reset">
       <center>
     </form>
